[gd_scene load_steps=12 format=2]

[ext_resource path="res://chat/ChatWindow.gd" type="Script" id=1]
[ext_resource path="res://fonts/B612Mono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/B612Mono-BoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/B612Mono-Italic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/B612Mono-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0862745, 0.0823529, 0.101961, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="ChatWindow" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="ChatContainer" type="VBoxContainer" parent="hbox"]
margin_right = 756.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="panelcontainer" type="PanelContainer" parent="hbox/ChatContainer"]
margin_right = 756.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ChatText" type="RichTextLabel" parent="hbox/ChatContainer/panelcontainer"]
margin_right = 756.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/bold_italics_font = SubResource( 3 )
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
scroll_following = true

[node name="ChatInputContainer" type="HBoxContainer" parent="hbox/ChatContainer"]
margin_top = 522.0
margin_right = 756.0
margin_bottom = 586.0

[node name="ChatInput" type="TextEdit" parent="hbox/ChatContainer/ChatInputContainer"]
margin_right = 702.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
readonly = true
caret_blink = true

[node name="ButtonSend" type="Button" parent="hbox/ChatContainer/ChatInputContainer"]
margin_left = 706.0
margin_right = 756.0
margin_bottom = 64.0
disabled = true
text = "Enviar"

[node name="UserContainer" type="VBoxContainer" parent="hbox"]
margin_left = 760.0
margin_right = 1010.0
margin_bottom = 586.0
rect_min_size = Vector2( 250, 0 )

[node name="LabelOnline" type="Label" parent="hbox/UserContainer"]
margin_right = 250.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )
text = "Online:"

[node name="UserList" type="ScrollContainer" parent="hbox/UserContainer"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VboxUserList" type="VBoxContainer" parent="hbox/UserContainer/UserList"]
margin_right = 250.0
size_flags_horizontal = 3
[connection signal="gui_input" from="hbox/ChatContainer/ChatInputContainer/ChatInput" to="." method="_on_LineEdit_gui_input"]
[connection signal="pressed" from="hbox/ChatContainer/ChatInputContainer/ButtonSend" to="." method="_on_ButtonSend_pressed"]
